--- a/index.html
+++ b/index.html
@@ -1331,11 +1331,11 @@
             </div>
             <div>
               LinkedIn:
-              <a href="https://www.linkedin.com" target="_blank" rel="noopener">Add your profile link here</a>
+              <a href="http://www.linkedin.com/in/harshil-varia-11850b1b3" target="_blank" rel="noopener">Add your profile link here</a>
             </div>
             <div>
               GitHub:
-              <a href="https://github.com" target="_blank" rel="noopener">Add your GitHub username here</a>
+              <a href="https://github.com/harshilvaria07" target="_blank" rel="noopener">Add your GitHub username here</a>
             </div>
           </div>
         </div>
@@ -1386,3 +1386,4 @@
   </script>
 </body>
 </html>
+
