--- a/index.html
+++ b/index.html
@@ -1329,14 +1329,6 @@
               Phone:
               <a href="tel:+919429503293">+91 94295 03293</a>
             </div>
-            <div>
-              LinkedIn:
-              <a href="http://www.linkedin.com/in/harshil-varia-11850b1b3" target="_blank" rel="noopener">Harshil Varia</a>
-            </div>
-            <div>
-              GitHub:
-              <a href="https://github.com/harshilvaria07" target="_blank" rel="noopener">Harshil Varia</a>
-            </div>
           </div>
         </div>
 
@@ -1364,8 +1356,8 @@
       <div>© <span id="year"></span> Harshil Varia. All rights reserved.</div>
       <div class="social-links">
         <a href="#top">Back to top ↑</a>
-        <a href="https://github.com" target="_blank" rel="noopener">GitHub</a>
-        <a href="https://www.linkedin.com" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://github.com/harshilvaria07" target="_blank" rel="noopener">GitHub</a>
+        <a href="http://www.linkedin.com/in/harshil-varia-11850b1b3" target="_blank" rel="noopener">LinkedIn</a>
       </div>
     </footer>
   </main>
@@ -1386,5 +1378,6 @@
   </script>
 </body>
 </html>
+
 
 
