--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta
     name="description"
-    content="Cybersecurity portfolio of Harshil Varia – Security Analyst & Associate Security Operations Specialist from Vadodara, India. Focused on VAPT, WAF, SIEM, cloud security and incident response."
+    content="Cybersecurity portfolio of Harshil Varia – Associate Security Operations Specialist from Vadodara. Focused on VAPT, WAF, SIEM, cloud security and incident response."
   />
 
   <!-- Google Font -->
@@ -908,7 +908,7 @@
         </h1>
 
         <p class="hero-subtitle">
-          Security Analyst & Associate Security Operations Specialist from Vadodara, India
+          Associate Security Operations Specialist from Vadodara
           with hands-on experience in VAPT, WAF, SIEM, cloud security and incident response.
           I help organisations detect threats early, reduce noise, and strengthen their security posture.
         </p>
@@ -968,7 +968,7 @@
               </div>
               <div class="terminal-line">
                 <span class="bracket">[WAF]</span>
-                <span> Akamai | Imperva | Fastly | AWS WAF:
+                <span> Akamai | Imperva | Cloudflare | AWS WAF:
                   <span class="value">ruleset updated &amp; deployed</span></span>
               </div>
               <div class="terminal-line">
@@ -1021,7 +1021,7 @@
             My work spans vulnerability assessment and penetration testing (VAPT),
             Web Application Firewalls (WAF), log analysis, incident response, root
             cause analysis and cloud security on AWS. I’m comfortable working with
-            tools like Acunetix, Nessus, Burp Suite, AWS Inspector, GuardDuty,
+            tools like Cloudflare, Acunetix, Nessus, Burp Suite, AWS Inspector, GuardDuty,
             Detective, SocRadar, BitSight, Imperva, Akamai, Fastly and SIEM stacks
             like Akamai WSA and ELK.
           </p>
@@ -1087,9 +1087,10 @@
           <span class="tag"><span class="tag-pill"></span>AWS GuardDuty</span>
           <span class="tag"><span class="tag-pill"></span>AWS Detective</span>
 
-          <span class="tag"><span class="tag-pill"></span>Imperva WAF</span>
-          <span class="tag"><span class="tag-pill"></span>Akamai WAF</span>
-          <span class="tag"><span class="tag-pill"></span>Fastly WAF</span>
+          <span class="tag"><span class="tag-pill"></span>CloudFlare </span>
+          <span class="tag"><span class="tag-pill"></span>Imperva </span>
+          <span class="tag"><span class="tag-pill"></span>Akamai </span>
+          <span class="tag"><span class="tag-pill"></span>Fastly </span>
           <span class="tag"><span class="tag-pill"></span>AWS WAF</span>
 
           <span class="tag"><span class="tag-pill"></span>SocRadar</span>
@@ -1378,6 +1379,7 @@
   </script>
 </body>
 </html>
+
 
 
 
