--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
       <div>
         <div class="pill">
           <span class="pill-dot"></span>
-          Security Analyst • Cloud & WAF
+          SIEM • Cloud • WAF
         </div>
 
         <h1>
@@ -1379,6 +1379,7 @@
   </script>
 </body>
 </html>
+
 
 
 
